--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -6,3 +6,6 @@
     name = {{ $name | quote }}
     email = {{ $email | quote }}
     machine_type = {{ $machine_type | quote }}
+
+[bitwarden]
+    command = "bw"
